--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="d-flex flex-column min-vh-100 align-items-center justify-content-center">
+            <div class="spinner-border" role="status"></div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
