--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/medical-icons/css/wfmi-style.css">
     <link href="css/app.css" rel="stylesheet" />
     <link href="ClientWebApp.styles.css" rel="stylesheet" />
 </head>
